--- a/index.ipynb
+++ b/index.ipynb
@@ -206,14 +206,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "name = 'Art Vandelay'\n",
-    "name = 'Art Vandelay'"
+    "name "
    ]
   },
   {
