Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -677,23 +677,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Liz Kaplan'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = 'Liz Kaplan'\n",
-    "name= \"liz Kaplan'\""
+    "name= \"liz Kaplan\""
    ]
   },
   {
